[package]
name = "webserver-config"
version = "0.0.2"
edition = "2021"
authors = ["Filip Znachor <admin@codespace.cz>"]
description = "Rust crate for web server config file generation"
license = "MIT"
repository = "https://git.codespace.cz/oohost/webserver-config"
keywords = ["webserver", "apache2", "nginx", "config"]
categories = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
