[package]
name = "webserver-config"
version = "0.1.1"
edition = "2021"
authors = ["Filip Znachor"]
description = "A Rust crate for generating configuration files for web servers."
license = "MIT"
repository = "https://git.codespace.cz/oohost/webserver-config"
keywords = ["webserver", "apache2", "nginx", "config"]
categories = ["config"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
